# garglk

./: .gitignore  .travis.yml  CMakeLists.txt  INSTALL  INSTALL.md  Jamfile  Jamrules  JamrulesRPM  Jamshared  License.txt  NEWS  README.md  THEMES.md  Toolchain-i686-w64-mingw32.cmake  Toolchain-mingw32.cmake  Toolchain-msvc-arm64.cmake  Toolchain-msvc-x86_64.cmake  Toolchain-msvc.cmake  Toolchain-x86_64-w64-mingw32.cmake  Toolchain.cmake  Unix2DOS.nsh  all_windows.sh  build.sh  buildKindle.sh  cmakeKindle.sh  cmakeLinux.sh  gargoyle-appimage.sh  gargoyle-builddeb.sh  gargoyle-buildrpm.sh  gargoyle.6  gargoyle_build.cmd  gargoyle_iplinux_n516.sh  gargoyle_osx.sh  gargoyle_package.cmd  gargoyle_win32.cmd  installer.nsi  libwin.sh  makeKindleDist.sh  makefile  msvc.sh  (+6 more)
garglk/: .gitignore  CMakeLists.txt  Go-Mono-Bold-Italic.hex  Go-Mono-Bold.hex  Go-Mono-Italic.hex  Go-Mono.hex  Jamfile  NotoSerif-Bold.hex  NotoSerif-BoldItalic.hex  NotoSerif-Italic.hex  NotoSerif-Regular.hex  TODO  babeldata.c  babeldata.cpp  cgblorb.c  cgdate.c  cgfref.c  cgfref.cpp  cggestal.c  cgmisc.c  cgstream.c  cgstream.cpp  cgstyle.c  cgunicod.c  cgunigen.c  config.c  config.cpp  dmb.hex  dmr.hex  dmz.hex  dpb.hex  dpi.hex  draw.c  draw.cpp  event.c  event.cpp  font.h  fontdata.c  fontfc.c  fontfc.cpp  (+106 more)
garglk/cheapglk/: LICENSE  VERSION.cheapglk  cgblorb.cpp  cgdate.c  cgdate.cpp  cgfref.c  cgfref.cpp  cggestal.c  cggestal.cpp  cgmisc.c  cgmisc.cpp  cgstream.c  cgstream.cpp  cgunicod.c  cgunicod.cpp  cgunigen.c  gi_blorb.h  gi_dispa.c  gi_dispa.h  glk.h  glkstart.h
garglk/fonts/: LuxiMonoRegular.pfb
support/babel/: .gitignore  CMakeLists.txt  LICENSE  README.md  adrift.c  advsys.c  agt.c  alan.c  babel_handler.c  babel_handler.h  blorb.c  executable.c  glulx.c  html.c  hugo.c  ifiction.c  ifiction.h  level9.c  magscrolls.c  makefile  misc.c  modules.h  register.c  register_ifiction.c  tads.c  tads.h  tads2.c  tads3.c  treaty.h  treaty_builder.h  twine.c  zcode.c
support/hqx/: CMakeLists.txt  hqx.h
support/sdl_sound/: CMakeLists.txt  alt_audio_convert.h  audio_convert.c  extra_rwops.h
tads/: .gitignore  CMakeLists.txt  COPYING  Jamfile  makefile  memicmp.c  osansi.h  osansi1.c  osansi2.c  osansi3.c  osbuffer.c  osextra.c  osextra.h  osfrobtads.h  osgarglk.h  osglk.c  osglkban.c  osnoban.c  osparse.c  osportable.cc  t3indlg.cpp  vmuni_cs.cpp
tads/tads2/: 437la1.tcs  CMakeLists.txt  LICENSE.TXT  adv.t  appctx.h  bif.h  cmap.h  cmd.h  dbgrun.c  errmsg.c  execmd.c  fio.c  fioxor.c  h_ix86.h  h_ix86_64.h  ler.c  lst.h  mch.h  mcm.h  oem.c  os.h  osgen.c  osgen3.c  osifc.c  osifc.h  osifcext.h  osnoui.c  osstzprs.c  ostzposix.c  output.c  portnote.txt  prs.h  readtads.src  regex.h  res.h  run.c  run.h  std.t  tadsver.htm  tcd.c  (+8 more)
tads/tads3/: CMakeLists.txt  LICENSE.TXT  README.TXT  askf_os3.cpp  charmap.cpp  gameinfo.cpp  indlg_os.cpp  indlg_tx3.cpp  md5.cpp  mkchrtab.cpp  msgcomp.cpp  osifcnet.cpp  osifcnet.h  resfind.cpp  resfind.h  resldexe.cpp  sha2.cpp  std.cpp  std_dbg.cpp  t3std.h  tccmdutl.h  tcerr.cpp  tcerrmsg.cpp  tcerrnum.h  tcgen.cpp  tcgen.h  tcglob.h  tchostsi.h  tcjsdrv.h  tclibprs.cpp  tcmain.cpp  tcmake.cpp  tcmake.h  tcmakecl.cpp  tcpndrv.h  tcpnint.h  tcprs.h  tcprs_d.cpp  tcprs_rt.cpp  tcprsfil.cpp  (+143 more)
terps/: CMakeLists.txt  Jamfile  garglk.manifest  status.txt  terp.mk
terps/advsys/: .gitignore  CMakeLists.txt  advdbs.c  advdbs.h  advexe.c  advint.c  advint.h  advjunk.c  advmsg.c  advprs.c  advtrm.c  header.h  makefile
terps/agility/: .gitignore  CMakeLists.txt  Makefile.glk  Makefile.plain  agil.c  agility.h  agtout.c  agtread.c  agxfile.c  auxfile.c  changes.txt  config.h  disassemble.c  exec.c  exec.h  filename.c  gamedata.c  interface.c  interp.h  makefile  metacommand.c  os_dos16.c  os_glk.c  os_linux.c  parser.c  porting.txt  readme.agility  runverb.c  savegame.c  token.c
terps/alan-3.0a6/: args.h  decode.c  exe.c  glkstart.c  main.c  params.h  stack.h  stateTest.c  sysdep.h  unit.c
terps/alan2/: .gitignore  CMakeLists.txt  Makefile  acode.h  args.c  args.h  debug.c  exe.c  exe.h  glkio.h  glkstart.c  main.c  makefile  params.h  parse.c  readline.h  rules.c  sysdep.h  term.h
terps/alan3/: .gitignore  AltInfo.c  AltInfo.h  CMakeLists.txt  Container.c  Container.h  Location.c  Location.h  Makefile  Makefile.cygwin  Makefile.unix  ParameterPosition.c  ParameterPosition.h  StateStack.c  StateStack.h  acode.h  act.c  act.h  actor.c  actor.h  alan.version.c  args.c  args.h  arun.c  arun.rc  attribute.c  attribute.h  checkentry.c  checkentry.h  class.c  class.h  compatibility.c  compatibility.h  converter.c  converter.h  current.c  current.h  debug.c  debug.h  decode.h  (+71 more)
terps/alan3.0a8/: act.c  attribute.c  debug.c  exe.c  glkstart.c  instance.c  inter.c  lists.c  literal.c  main.c  parse.c  resources.h  reverse.c  save.c  stack.h  state.c  state.h  syntax.c  syntax.h  utils.c  utils.h  winargs.c
terps/bocfel/: .gitignore  BUILDING  CMakeLists.txt  COPYING.GPLv2  COPYING.GPLv3  LICENSE  README  blorb.c  blorb.cpp  blorb.h  branch.c  branch.cpp  branch.h  dict.c  dict.cpp  dict.h  glkautosave.cpp  glkautosave.h  glkstart.c  glkstart.cpp  help.h  iff.c  iff.cpp  iff.h  io.c  io.cpp  io.h  makefile  math.c  math.h  mathop.cpp  mathop.h  memory.c  memory.cpp  memory.h  meta.c  meta.cpp  meta.h  objects.c  objects.cpp  (+44 more)
terps/c64diskimage/: CMakeLists.txt  c64diskimage.c  c64diskimage.h
terps/frankendrift/: Directory.Build.props  Directory.Build.targets
terps/frotz/: .gitignore  CMakeLists.txt  README  buffer.c  err.c  fastmem.c  files.c  frotz.h  glkfrotz.h  glkio.h  glkmisc.c  glkscreen.c  input.c  main.c  makefile  object.c  process.c  quetzal.c  stream.c  table.c
terps/geas/: .gitignore  CMakeLists.txt  GeasRunner.hh  LimitStack.hh  geas-impl.hh  geas-runner.cc  geas-state.cc  geas-state.hh  geas-util.cc  geas-util.hh  geasfile.cc  geasfile.hh  geasglk.cc  geasglkterm.c  istring.cc  istring.hh  makefile  readfile.cc  readfile.hh  reserved_words.hh
terps/git-1.2.0/: git_mac.c
terps/git-1.2.1/: opcodes.h
terps/git-1.2.2/: Makefile.win  saveundo.c  terp.c  (+1 more)
(+4169 files in other folders)
